[package]
name = "icfp2019"
version = "0.1.0"
authors = ["Hayato Ito <hayato@google.com>"]
edition = "2018"

[dependencies]
loggerv = "0.7.1"
structopt = "0.2.16"
failure = "0.1.5"
log = "0.4.6"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
lazy_static = "1.3.0"
chrono = "0.4.6"
rayon = "1.1.0"
file-lock = "1.1.20"
regex = "1.1.7"

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "my_benchmark"
harness = false
